--- a/style.css
+++ b/style.css
@@ -303,6 +303,8 @@ main.profile {
 /* Call-to-action button */
 .call-to-action {
     margin-top: 40px;
+    text-align: center;
+    margin-bottom: 40px;
 }
 
 .learn-more-button {
